[package]
name = "futures-pipe"
version = "0.1.0"
authors = ["Hyunkang Kim <kimhyunkang@gmail.com>"]

[dependencies]
futures = "0.1"
tokio-io = { version = "0.1", optional = true }

[dev-dependencies]
rand = "0.3"
tokio-core = "0.1"

[features]
default = ["use_tokio_io"]

use_tokio_io = ["tokio-io"]
